# aperio

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
docs/: aperio-api.postman_collection.json
migrations/: 001_create_jobs_table.sql  002_add_performance_indexes.sql
src/: config.rs  database.rs  error.rs  main.rs  monitoring.rs
src/api/: mod.rs  monitoring.rs  routes.rs
src/middleware/: auth.rs  mod.rs  request_tracking.rs
src/models/: job.rs
src/services/: cleanup.rs  download.rs  job_queue.rs  job_repository.rs  metrics.rs  mod.rs  pool_manager.rs  process.rs  retention.rs  retry.rs  security.rs  storage.rs
