[package]
name = "aperio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-actix-web = "0.7.18"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
base64 = "0.22.1"

